--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
+database.type=MySQL
+database.url=jdbc:mysql://localhost:3306/clothes_store?sslMode=DISABLED&serverTimezone=UTC
+database.user=root
+database.password=root
 
